# SHUTEN-D-JI

./: .gitignore  ARCHITECTURE.md  README.md  _eval_script_1081.py  mvp_side_by_side_h200_v2.json  mvp_side_by_side_h200_v2_metrics.json  mvp_side_by_side_v2.json  pyproject.toml
configs/factory/: pipeline.yaml
configs/model/: shuten_doji_base.yaml  shuten_doji_mini.yaml
configs/training/: deepspeed_zero3.json  phase1_sft.yaml  phase2_tools.yaml  phase3_dpo.yaml  phase4_ppo.yaml  shuten_code_public_sft_h200.yaml  shuten_code_sft.yaml  shuten_dpo.yaml  shuten_identity_aggressive_v1.yaml  shuten_sft.yaml  shuten_sft_32b.yaml  shuten_sft_a100_27b.yaml  shuten_sft_a100_27b_v2.yaml  shuten_sft_a100_27b_v2_1.yaml  shuten_sft_h200.yaml
data/schemas/: trajectory.json  world_state.json
docs/: CODE_FORGE_V1_RUNBOOK.md  CODE_FORGE_V1_SHIP_GATE.md  CODE_FORGE_V1_SPEC.md  CODE_PUBLIC_BOOTSTRAP_H200.md
scripts/: bootstrap_sft_json.py  build_identity_pack.py  check_gpu.py  deploy_a100_27b.sh  download_qwen35_122b.sh  download_qwen36_27b.sh  eval_code.py  eval_identity_gate.py  eval_mvp.py  forge_build_eval.py  forge_build_failure.py  forge_build_gold.py  forge_gen.py  forge_import_public.py  forge_pack.py  forge_ship_gate.py  forge_smoke.py  generate_data.py  generate_with_llm.py  lf_gptq_mp.py  lf_train_entry.py  merge_and_upload_shuten_doji.sh  patch_prometheus_routing.py  poll_eval.sh  rebuild_venv_a100.sh  rebuild_venv_local.sh  run_pipeline.sh  run_side_by_side_h200_v2.sh  serve_lora_a100.sh  serve_model.sh  serve_model_a100.sh  serve_model_h200.sh  setup_a100_27b.sh  setup_h200.sh  test_tokenizer.py  train.sh  train_dpo.sh  train_dpo_gptq.py  train_sft.sh  train_sft_a100.sh  (+6 more)
src/: __init__.py
src/forge/: __init__.py  (+12 more)
tests/: test_model.py  test_state_generator.py
(+35 files in other folders)
