[project]
name = "shuten-doji"
version = "0.1.0"
description = "SHUTEN-DOJI: Synthetic Strategic Intelligence Factory by NULLXES DAI"
authors = [{name = "NULLXES DAI"}]
readme = "README.md"
requires-python = ">=3.10"
license = {text = "Apache-2.0"}

dependencies = [
    "torch>=2.4.0",
    "transformers>=4.45.0",
    "datasets>=3.0.0",
    "accelerate>=1.0.0",
    "peft>=0.13.0",
    "trl>=0.12.0",
    "pydantic>=2.9.0",
    "pyyaml>=6.0",
    "numpy>=1.26.0",
    "jsonschema>=4.23.0",
    "uuid7>=0.1.0",
    "rich>=13.9.0",
    "typer>=0.12.0",
    "vllm>=0.8.0",
    "openai>=1.50.0",
    "aiohttp>=3.10.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.7.0",
    "mypy>=1.12.0",
]
train = [
    "deepspeed>=0.15.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.uv]
dev-dependencies = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.7.0",
    "mypy>=1.12.0",
]

[tool.uv.sources]
torch = [
    { index = "pytorch-cu124", marker = "sys_platform == 'linux'" },
]

[[tool.uv.index]]
name = "pytorch-cu124"
url = "https://download.pytorch.org/whl/cu124"
explicit = true

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP"]

[tool.ruff.lint.per-file-ignores]
# Data-content modules: hand-authored code/answer strings are intentionally long.
"src/forge/gold_corpus.py" = ["E501"]
"src/forge/failure_corpus.py" = ["E501"]
"src/forge/bench.py" = ["E501"]
"src/forge/retention.py" = ["E501"]

[tool.mypy]
python_version = "3.10"
strict = true
